@startuml


class GranjaDeOrson{

    +calcularEnergia() : int

}


abstract class Animal {

    +usarHabilidad(unaHabilidad: Accion ,veces:int)
    +calcularEnergia() : int

}

class Pato{
    +usarHabilidad(unaHabilidad: Accion ,veces:int)
    +calcularEnergia() : int

}

class Ganso{
    +usarHabilidad(unaHabilidad: Accion ,veces:int)
    +calcularEnergia() : int

}

class ChanchoVolador{

    +usarHabilidad(unaHabilidad: Accion ,veces:int)
    +calcularEnergia() : int


}

abstract class Habilidad {
    #costo :int
    #movimientoDisponible : int

    +accion(veces: int)
    +calcularEnergia() : int
}

class Nadar {

    +accion(veces: int)
    +calcularEnergia() : int
}

class Volar {

    +accion(veces: int)
    +calcularEnergia() : int

}

Volar --|> Habilidad 
Nadar --|> Habilidad

GranjaDeOrson "1" o-- "*" Animal
ChanchoVolador --|> Animal
Pato --|> Animal
Ganso --|> Animal

Animal "*" --> "*" Habilidad 







@enduml